2007-12-12  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXWm.c (ApplyMasterOverrideChanges): Revert 2007-10-26
	change to window class of transient toplevels that are not also
	overrideredirect. [Bug 1845899]

	* macosx/tkMacOSXWm.c (ApplyMasterOverrideChanges): Implement more
	* macosx/tkMacOSXMouseEvent.c (BringWindowForward): X11-like transient
	* macosx/tkMacOSXSubwindows.c (XDestroyWindow):     behaviour by adding
	transient windows to a window group owned by the master window, this
	ensures transients always remain in front of and are collapsed with the
	master; bring master to front when selecting transient windows; restore
	default window group of transients if master destroyed. [Bug 1845899]

2007-12-12  Joe English  <jenglish@users.sourceforge.net>

	* doc/ttk_intro.n, doc/ttk_style.n, doc/ttk_widget.n:
	Various minor updates.

2007-12-12  Don Porter  <dgp@users.sourceforge.net>

	* changes:		Updated for 8.5.0 release.

2007-12-11  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTheme.c(StyleElementOptionsCmd):
	Use Ttk_GetElement() to find element instead of direct
	hash table access.

2007-12-11  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkText.c (TextReplaceCmd): Added code to rebuild the from
	index after the deletion phase so that the linePtr field is valid for
	the insertion phase. [Bug 1602537]

2007-12-10  Donal K. Fellows  <dkf@users.sf.net>

	* doc/event.n: Clarify the fact that [event info] only returns the
	names of virtual events that are bound to physical event sequences.
	This follows on from comments on comp.lang.tcl.
	http://groups.google.com/group/comp.lang.tcl/msg/935d2d226ae8a770

2007-12-10  Joe English  <jenglish@users.sourceforge.net>

	* doc/AddOption.3, doc/CrtImgType.3, doc/CrtPhImgFmt.3,
	* doc/InternAtom.3, doc/TextLayout.3, doc/chooseColor.n,
	* doc/chooseDirectory.n, doc/loadTk.n, doc/palette.n,
	* doc/ttk_combobox.n: Various markup fixes (mostly: missing quotes on